plugins {
    id 'java'
    id 'application'

    id 'com.github.johnrengelman.shadow' version '5.0.0'
}

group 'RaspiOpener'
version ''

ext {
    uberJarName = "${group}-all.jar"
    jarName = "${group}.jar"
    libs = "${buildDir}/libs"

    groupName = "${group}"
}

compileJava.options.encoding = 'UTF-8'

sourceCompatibility = 1.11
targetCompatibility = 1.11

mainClassName = 'de.NikomitK.RaspiOpener.main.Main'

repositories {
    mavenCentral()

    maven {
        url = uri("https://raw.githubusercontent.com/yoyosource/YAPION/master/releases")
    }
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['src']
        }
    }
}

dependencies {
    testCompile 'junit:junit:4.12'

    compileOnly 'org.projectlombok:lombok:1.18.6'
    testCompileOnly 'org.projectlombok:lombok:1.18.6'
    annotationProcessor 'org.projectlombok:lombok:1.18.6'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.6'

    implementation 'com.pi4j:pi4j-core:1.4'
    implementation 'yoyosource:YAPION:0.25.3'
}

shadowJar {
    manifest {
        attributes(
                'Main-Class': mainClassName
        )
    }
}

task buildProject {
    description 'Build this repo'
    group "Build"

    doLast {
        if ("${buildDir}" == null) {
            return
        }
        delete fileTree("${libs}").matching {
            exclude("${uberJarName}")
        }
        file(libs + "/" + uberJarName).renameTo(file(libs + "/" + jarName))
    }
}
build.finalizedBy(buildProject)
